# odos-sdk

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  GETTING_STARTED.md  MIGRATION.md  README.md  SECURITY.md
.github/workflows/: commit-stage.yml  release.yml
abis/: odos_limit_order_v2.json
src/: agent.rs  api.rs  api_key.rs  assemble.rs  chain.rs  client.rs  contract.rs  erc20.rs  error.rs  error_code.rs  integration_tests.rs  lib.rs  limit_order_v2.rs  op_stack.rs  prelude.rs  router_type.rs  sor.rs  swap.rs  swap_builder.rs  tooling.rs  transfer.rs  v2_router.rs  v3_router.rs
src/types/: chain.rs  mod.rs  referral.rs  slippage.rs
tests/: fork_tests.rs
