[package]
name = "odos-sdk"
version = "1.3.0"

authors = ["Joseph Livesey <joseph@semiotic.ai>"]
categories = ["finance", "api-bindings"]
description = "Rust SDK for Odos"
edition = "2021"
homepage = "https://crates.io/crates/odos-sdk"
keywords = ["defi", "ethereum", "web3", "blockchain", "sdk"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/semiotic-ai/odos-sdk"

[features]
# Default features: most common use case with V2 and V3 router support
default = ["v2", "v3"]

# Minimal: Core API types and HTTP client only (no contract bindings)
minimal = []

# Contract binding features
# Note: V2 is the base contract feature (provides SwapInputs type used by all routers)
v2 = [] # V2 router contract bindings
v3 = ["v2"] # V3 router contract bindings (requires v2 for SwapInputs)
limit-orders = [
    "v2",
] # Limit order contract bindings (requires v2 for SwapInputs)

# OP-stack chain support (Base, Optimism, Fraxtal)
# Provides access to L1 gas information in transaction receipts
op-stack = ["dep:op-alloy-network", "dep:op-alloy-rpc-types", "v2", "v3"]

# Convenience feature to enable all contract bindings
contracts = ["v2", "v3", "limit-orders"]

[dependencies]
alloy-chains = "0.2.27"
alloy-contract = { version = "1.4.0", default-features = false }
alloy-json-rpc = { version = "1.4.0", default-features = false }
alloy-network = { version = "1.4.0", default-features = false }
alloy-primitives = { version = "1.5.2", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.4.0", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-client = "1.4.0"
alloy-rpc-types = "1.4.0"
alloy-signer = { version = "1.4.0", default-features = false }
alloy-signer-local = { version = "1.4.0", default-features = false }
alloy-sol-types = { version = "1.5.2", features = ["json"] }
alloy-sol-type-parser = "1.5.2"
alloy-transport = { version = "1.4.0", default-features = false }
alloy-transport-http = { version = "1.4.0", default-features = false, features = [
    "reqwest",
] }

# OP-stack support (optional)
op-alloy-network = { version = "0.23", optional = true }
op-alloy-rpc-types = { version = "0.23", optional = true }
backon = "1.6"
bon = "3.8.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["time", "rt"] }
tracing = "0.1.44"
url = "2.5"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
wiremock = "0.6.5"
tokio-test = "0.4"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
http = "1.4"
