[package]
name = "odos-sdk"
version = "2.0.0"

authors = ["Joseph Livesey <joseph@semiotic.ai>"]
categories = ["finance", "api-bindings"]
description = "Rust SDK for Odos"
edition = "2021"
homepage = "https://crates.io/crates/odos-sdk"
keywords = ["defi", "ethereum", "web3", "blockchain", "sdk"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/semiotic-ai/odos-sdk"

[features]
# Default features: most common use case with V2 and V3 router support
default = ["v2", "v3"]

# Minimal: Core API types and HTTP client only (no contract bindings)
minimal = []

# Contract binding features
# Note: V2 is the base contract feature (provides SwapInputs type used by all routers)
v2 = [] # V2 router contract bindings
v3 = ["v2"] # V3 router contract bindings (requires v2 for SwapInputs)
limit-orders = [
    "v2",
] # Limit order contract bindings (requires v2 for SwapInputs)

# OP-stack chain support (Base, Optimism, Fraxtal)
# Provides access to L1 gas information in transaction receipts
op-stack = ["dep:op-alloy-network", "dep:op-alloy-rpc-types", "v2", "v3"]

# Convenience feature to enable all contract bindings
contracts = ["v2", "v3", "limit-orders"]

[dependencies]
alloy-chains = "0.2.30"
alloy-contract = { version = "1.7.3", default-features = false }
alloy-json-rpc = { version = "1.7.3", default-features = false }
alloy-network = { version = "1.7.3", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false, features = [
    "std",
    "rlp",
] }
alloy-provider = { version = "1.7.3", default-features = false, features = [
    "anvil-node",
    "reqwest",
] }
alloy-rpc-client = "1.7.3"
alloy-rpc-types = "1.7.3"
alloy-signer = { version = "1.7.3", default-features = false }
alloy-signer-local = { version = "1.7.3", default-features = false }
alloy-sol-types = { version = "1.5.7", features = ["json"] }
alloy-sol-type-parser = "1.5.7"
alloy-transport = { version = "1.7.3", default-features = false }
alloy-transport-http = { version = "1.7.3", default-features = false, features = [
    "reqwest",
] }

# OP-stack support (optional)
op-alloy-network = { version = "0.23", optional = true }
op-alloy-rpc-types = { version = "0.23", optional = true }
backon = "1.6"
bon = "3.9.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["time", "rt"] }
tracing = "0.1.44"
url = "2.5"
uuid = { version = "1.21.0", features = ["serde", "v4"] }

[dev-dependencies]
wiremock = "0.6.5"
tokio-test = "0.4"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
http = "1.4"
